[project]
name = "agents-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "akasha", email = "mujahidjameel390@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.2.11",
]

[project.scripts]
agents-packaged = "agents_package.main:run_agent"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
